prevent line breaks in tag on enter

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -284,7 +284,7 @@ p:has(mark) {
     }
   }
 
-  &[contenteditable='true'] {
+  &[contenteditable] {
     outline: none;
     min-width: 50px;
     background: white !important;
